--- a/Reveche/App.xaml
+++ b/Reveche/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="RVTVersionerGUI.App"
+﻿<Application x:Class="Reveche.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
