--- a/Reveche/MainWindow.xaml
+++ b/Reveche/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="RVTVersionerGUI.MainWindow"
+﻿<Window x:Class="Reveche.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         xmlns:src="clr-namespace:RVTVersionerGUI.Converters"
-        Title="RVTVersioner" MinHeight="250" MinWidth="325"
-        DragEnter="Window_DragEnter" DragLeave="Window_DragLeave" AllowDrop="True" Drop="Window_Drop" DragOver="Window_DragOver">
+         xmlns:src="clr-namespace:Reveche.Converters"
+        Title="Revit Version Checker" MinHeight="250" MinWidth="325"
+        DragEnter="Window_DragEnter" DragLeave="Window_DragLeave" AllowDrop="True" Drop="Window_Drop" Icon="favicon.ico">
     <Window.Resources>
         <ResourceDictionary>
             <src:CountConverter x:Key="countConverter"/>
