Add ability to paste add a list of file paths to the application and have those processed.

--- a/Reveche/MainWindow.xaml
+++ b/Reveche/MainWindow.xaml
@@ -24,6 +24,9 @@
         </ResourceDictionary>
 
     </Window.Resources>
+    <Window.CommandBindings>
+        <CommandBinding Command="Paste" Executed="Window_Paste"/>
+    </Window.CommandBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
